fix: remove no wrap

--- a/ddp-workspace/projects/ddp-singular/src/app/components/pages/participant-list/participant-list.component.scss
+++ b/ddp-workspace/projects/ddp-singular/src/app/components/pages/participant-list/participant-list.component.scss
@@ -88,7 +88,6 @@
       color: black;
       font-family: 'Spartan-Bold', sans-serif;
       width: 20rem;
-      white-space: nowrap;
   }
 
   &__expand-btn {
